--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <div class="container">
                 <ul class="links">
                     <li class="logo"><img src="images/logo.png" alt=""></li>
-                    <li><a href="" class="active">Home</a></li>
-                    <li><a href="otherpages/indexourshop.html">Our Shop</a></li>
-                    <li><a href="otherpages/indexproductdetails.html">Product Details</a></li>
-                    <li><a href="otherpages/indexcontactus.html">Contact Us</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="otherpages/ourshop.html">Our Shop</a></li>
+                    <li><a href="otherpages/productdetails.html">Product Details</a></li>
+                    <li><a href="otherpages/contactus.html">Contact Us</a></li>
                     <li><a href="" class="Sign-in">Sign In</a></li>
                 </ul>
             </div>
