--- a/otherpages/ourshop.html
+++ b/otherpages/ourshop.html
@@ -19,9 +19,9 @@
                 <ul class="links">
                     <li class="logo"><img src="../images/logo.png" alt=""></li>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="indexourshop.html" class="active">Our Shop</a></li>
-                    <li><a href="indexproductdetails.html">Product Details</a></li>
-                    <li><a href="indexcontactus.html">Contact Us</a></li>
+                    <li><a href="ourshop.html" class="active">Our Shop</a></li>
+                    <li><a href="productdetails.html">Product Details</a></li>
+                    <li><a href="contactus.html">Contact Us</a></li>
                     <li><a href="" class="Sign-in">Sign In</a></li>
                 </ul>
             </div>
