--- a/otherpages/productdetails.html
+++ b/otherpages/productdetails.html
@@ -19,16 +19,16 @@
                 <ul class="links">
                     <li class="logo"><img src="../images/logo.png" alt=""></li>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="indexourshop.html">Our Shop</a></li>
+                    <li><a href="ourshop.html">Our Shop</a></li>
                     <li><a href="indexproductdetails.html" class="active">Product Details</a></li>
-                    <li><a href="indexcontactus.html">Contact Us</a></li>
+                    <li><a href="contactus.html">Contact Us</a></li>
                     <li><a href="" class="Sign-in">Sign In</a></li>
                 </ul>
             </div>
         </nav>
         <div class="row">
             <h1>Modern Warfare® II</h1>
-            <div class="link"><a href="../index.html">home</a> &gt; <a href="indexourshop.html">shop</a> &gt; Modern
+            <div class="link"><a href="../index.html">home</a> &gt; <a href="ourshop.html">shop</a> &gt; Modern
                 Warfare II</div>
         </div>
     </header>
